force-app/main/default/objects/Todo__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&quot;Later&quot;</defaultValue>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Tomorrow</fullName>
            </value>
            <value>
                <fullName>Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>