force-app/main/default/objects/Todo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&quot;We need...&quot;</defaultValue>
    <label>Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>