force-app/main/default/objects/Todo__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;https://curious-narwhal-50iui7-dev-ed--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0688Y00000GqD3g&amp;operationContext=CHATTER&amp;contentId=05T8Y00000xXjnc&quot;,&quot; alternate_text&quot;, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>