force-app/main/default/objects/Todo__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>&quot;low&quot;</defaultValue>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>