force-app/main/default/objects/Todo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;draft&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
            </value>
            <value>
                <fullName>in progress</fullName>
            </value>
            <value>
                <fullName>done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>